Stick to 1nd pass with Manami